force-app/main/default/objects/OB_Campaign_Member__c/OB_Campaign_Member__c.object-meta.xml
<CustomObject>
    <label>OB Campaign Member</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>OB Campaign Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OB Campaign Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>