force-app/main/default/objects/OB_Campaign_Member__c/fields/Account_LeadID__c.field-meta.xml
<CustomField>
    <fullName>Account_LeadID__c</fullName>
    <formula>AccountName__r.Lead_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account LeadID</label>
    <type>Text</type>
</CustomField>