force-app/main/default/objects/OB_Campaign_Member__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>AccountName__r.FirstName  &amp; &quot; &quot; &amp;  AccountName__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fAccount Name</label>
    <type>Text</type>
</CustomField>