force-app/main/default/objects/OB_Campaign_Member__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <formula>AccountName__r.PersonContact.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fAccountID</label>
    <type>Text</type>
</CustomField>