force-app/main/default/objects/OB_Campaign_Member__c/fields/Address_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Address_Unique_Key__c</fullName>
    <formula>User_Address__r.Address__r.Unique_Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Unique Key</label>
    <type>Text</type>
</CustomField>