force-app/main/default/objects/OB_Campaign_Member__c/fields/Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email__c</fullName>
    <description>Call center agent email address.</description>
    <label>Agent Email</label>
    <type>TextArea</type>
</CustomField>