force-app/main/default/objects/OB_Campaign_Member__c/fields/Appointment_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Outcome__c</fullName>
    <description>This field is to capture the input as &apos;Appointment Set&apos; from Agent</description>
    <label>Appointment Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appointment Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>