force-app/main/default/objects/OB_Campaign_Member__c/fields/Appointment_Set_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Set_Date__c</fullName>
    <description>Call appointment set date.</description>
    <label>Appointment Set Date</label>
    <type>Date</type>
</CustomField>