force-app/main/default/objects/OB_Campaign_Member__c/fields/Appointment_Set_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Set_Time__c</fullName>
    <description>Time frame that the appointment is set for.</description>
    <label>Requested Appointment Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9 AM</fullName>
            </value>
            <value>
                <fullName>10 AM</fullName>
            </value>
            <value>
                <fullName>11 AM</fullName>
            </value>
            <value>
                <fullName>12 PM</fullName>
            </value>
            <value>
                <fullName>1 PM</fullName>
            </value>
            <value>
                <fullName>2 PM</fullName>
            </value>
            <value>
                <fullName>3 PM</fullName>
            </value>
            <value>
                <fullName>4 PM</fullName>
            </value>
            <value>
                <fullName>5 PM</fullName>
            </value>
            <value>
                <fullName>6 PM</fullName>
            </value>
            <value>
                <fullName>7 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>