force-app/main/default/objects/OB_Campaign_Member__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <formula>User_Address__r.Address__r.Branch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fBranch</label>
    <type>Text</type>
</CustomField>