force-app/main/default/objects/OB_Campaign_Member__c/fields/Call_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Call_Attempts__c</fullName>
    <description>Number of call attempts in the dialer.</description>
    <label>Call Attempts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>