force-app/main/default/objects/OB_Campaign_Member__c/fields/Call_Cadence_Sent__c.field-meta.xml
<CustomField>
    <fullName>Call_Cadence_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Rule will check this box once a campaign member in a specific industry is eligible to be dialed and has been sent to the dialer list.</description>
    <label>Call Cadence Sent</label>
    <type>Checkbox</type>
</CustomField>