force-app/main/default/objects/OB_Campaign_Member__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <formula>OB_Campaign__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Name</label>
    <type>Text</type>
</CustomField>