force-app/main/default/objects/OB_Campaign_Member__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>User_Address__r.Address__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fCity</label>
    <type>Text</type>
</CustomField>