force-app/main/default/objects/OB_Campaign_Member__c/fields/City_Post__c.field-meta.xml
<CustomField>
    <fullName>City_Post__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>