force-app/main/default/objects/OB_Campaign_Member__c/fields/Click_to_Dial_Phone__c.field-meta.xml
<CustomField>
    <fullName>Click_to_Dial_Phone__c</fullName>
    <description>Allows to click to dial after a field update rule inserts the formula phone into this field.</description>
    <inlineHelpText>Allows to click to dial after a field update rule inserts the formula phone into this field.</inlineHelpText>
    <label>Click to Dial Phone</label>
    <type>Phone</type>
</CustomField>