force-app/main/default/objects/OB_Campaign_Member__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>Text(User_Address__r.Address__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fCountry</label>
    <type>Text</type>
</CustomField>