force-app/main/default/objects/OB_Campaign_Member__c/fields/Country_Post__c.field-meta.xml
<CustomField>
    <fullName>Country_Post__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>