force-app/main/default/objects/OB_Campaign_Member__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <formula>User_Address__r.Address__r.County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fCounty</label>
    <type>Text</type>
</CustomField>