force-app/main/default/objects/OB_Campaign_Member__c/fields/County_Post__c.field-meta.xml
<CustomField>
    <fullName>County_Post__c</fullName>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>