force-app/main/default/objects/OB_Campaign_Member__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <formula>AccountName__r.Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fDelivery Date</label>
    <type>Date</type>
</CustomField>