force-app/main/default/objects/OB_Campaign_Member__c/fields/Dialer_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Dialer_Campaign__c</fullName>
    <formula>IF(AND(fResDate_NumOfDays__c &lt; 8), &apos;A&apos;,
IF(AND(fResDate_NumOfDays__c &lt;= 29), &apos;B&apos;,
IF(AND(fResDate_NumOfDays__c &gt;= 30), &apos;C&apos;, &apos;C&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dialer Campaign</label>
    <type>Text</type>
</CustomField>