force-app/main/default/objects/OB_Campaign_Member__c/fields/Dialer_Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Dialer_Campaign_Status__c</fullName>
    <formula>IF(AND(fVerbal_Consent_Flag__c = True,Status_Post__c = &quot;&quot;), &apos;Processing&apos;, 
IF(AND(fVerbal_Consent_Flag__c = True,Status_Post__c &lt;&gt; &quot;&quot;), &apos;Completed&apos;, &apos;Invalid&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dialer Campaign Status</label>
    <type>Text</type>
</CustomField>