force-app/main/default/objects/OB_Campaign_Member__c/fields/Do_Not_Call_Post__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>