force-app/main/default/objects/OB_Campaign_Member__c/fields/DupCatcher__c.field-meta.xml
<CustomField>
    <fullName>DupCatcher__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Prevents duplicate OB Campaign Members from being manually entered into the system.</description>
    <label>DupCatcher</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>