force-app/main/default/objects/OB_Campaign_Member__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>User_Address__r.UserAccount__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fEmail</label>
    <type>Text</type>
</CustomField>