force-app/main/default/objects/OB_Campaign_Member__c/fields/Email_Opt_Out_Post__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>