force-app/main/default/objects/OB_Campaign_Member__c/fields/Email_Post__c.field-meta.xml
<CustomField>
    <fullName>Email_Post__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>