force-app/main/default/objects/OB_Campaign_Member__c/fields/fCall_Center__c.field-meta.xml
<CustomField>
    <fullName>fCall_Center__c</fullName>
    <formula>OB_Campaign__r.fOB_Campaign_Call_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fCall Center</label>
    <type>Text</type>
</CustomField>