force-app/main/default/objects/OB_Campaign_Member__c/fields/fCall_Center_is_Ready__c.field-meta.xml
<CustomField>
    <fullName>fCall_Center_is_Ready__c</fullName>
    <formula>OB_Campaign__r.Call_Center_is_Ready_Post__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Center is Ready</label>
    <type>Checkbox</type>
</CustomField>