force-app/main/default/objects/OB_Campaign_Member__c/fields/fDNC__c.field-meta.xml
<CustomField>
    <fullName>fDNC__c</fullName>
    <formula>AccountName__r.PersonDoNotCall</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fDNC</label>
    <type>Checkbox</type>
</CustomField>