force-app/main/default/objects/OB_Campaign_Member__c/fields/fHome_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>fHome_Sale_Date__c</fullName>
    <formula>TEXT ( AccountName__r.Sale_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fHome Sale Date</label>
    <type>Text</type>
</CustomField>