force-app/main/default/objects/OB_Campaign_Member__c/fields/fHome_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>fHome_Sale_Price__c</fullName>
    <formula>TEXT (AccountName__r.Sales_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fHome Sale Price</label>
    <type>Text</type>
</CustomField>