force-app/main/default/objects/OB_Campaign_Member__c/fields/fHours__c.field-meta.xml
<CustomField>
    <fullName>fHours__c</fullName>
    <formula>OB_Campaign__r.OB_Campaign_Time_Zones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fHours</label>
    <type>Text</type>
</CustomField>