force-app/main/default/objects/OB_Campaign_Member__c/fields/fIndustry__c.field-meta.xml
<CustomField>
    <fullName>fIndustry__c</fullName>
    <formula>Industry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fIndustry</label>
    <type>Text</type>
</CustomField>