force-app/main/default/objects/OB_Campaign_Member__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <formula>AccountName__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fFirst Name</label>
    <type>Text</type>
</CustomField>