force-app/main/default/objects/OB_Campaign_Member__c/fields/First_Name_Post__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Post__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>