force-app/main/default/objects/OB_Campaign_Member__c/fields/fNuHome_Industry__c.field-meta.xml
<CustomField>
    <fullName>fNuHome_Industry__c</fullName>
    <formula>Industry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fNuHome Industry</label>
    <type>Text</type>
</CustomField>