force-app/main/default/objects/OB_Campaign_Member__c/fields/fOB_Call_ID__c.field-meta.xml
<CustomField>
    <fullName>fOB_Call_ID__c</fullName>
    <formula>IF(Status_Post__c = &quot;DNC&quot;, &quot;1&quot;, 
IF(Status_Post__c = &quot;Appointment Set&quot;, &quot;1&quot;, 
&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Modified to use as a filter for Status Post so we do not put finalized records back in the dialer.</inlineHelpText>
    <label>fOB Call ID</label>
    <type>Text</type>
</CustomField>