force-app/main/default/objects/OB_Campaign_Member__c/fields/fOB_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>fOB_Campaign_ID__c</fullName>
    <formula>OB_Campaign__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fOB Campaign ID</label>
    <type>Text</type>
</CustomField>