force-app/main/default/objects/OB_Campaign_Member__c/fields/fOB_Campaign_Member_ID18__c.field-meta.xml
<CustomField>
    <fullName>fOB_Campaign_Member_ID18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fOB Campaign Member ID18</label>
    <type>Text</type>
</CustomField>