force-app/main/default/objects/OB_Campaign_Member__c/fields/fOB_Campaign_Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>fOB_Campaign_Offer_Amount__c</fullName>
    <description>Used for automation and the OB Campaign Member Script.  PLEASE DO NOT DELETE.</description>
    <formula>OB_Campaign__r.OB_Campaign_Offer_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for automation and the OB Campaign Member Script.  PLEASE DO NOT DELETE.</inlineHelpText>
    <label>fOB Campaign Offer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>