force-app/main/default/objects/OB_Campaign_Member__c/fields/fOBcallidformat__c.field-meta.xml
<CustomField>
    <fullName>fOBcallidformat__c</fullName>
    <formula>TEXT(1) + fOB_Call_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fOBcallidformat</label>
    <type>Text</type>
</CustomField>