force-app/main/default/objects/OB_Campaign_Member__c/fields/fOpportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>fOpportunity_ID__c</fullName>
    <formula>OB_Campaign__r.Opportunity_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fOpportunity ID</label>
    <type>Text</type>
</CustomField>