force-app/main/default/objects/OB_Campaign_Member__c/fields/fOpportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>fOpportunity_Name__c</fullName>
    <formula>OB_Campaign__r.Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fOpportunity Name</label>
    <type>Text</type>
</CustomField>