force-app/main/default/objects/OB_Campaign_Member__c/fields/fOppRecordType__c.field-meta.xml
<CustomField>
    <fullName>fOppRecordType__c</fullName>
    <formula>OB_Campaign__r.Opportunity__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fOppRecordType</label>
    <type>Text</type>
</CustomField>