force-app/main/default/objects/OB_Campaign_Member__c/fields/fPhoneBP__c.field-meta.xml
<CustomField>
    <fullName>fPhoneBP__c</fullName>
    <formula>IF(Industry__c = &quot;a3Gj0000000XZLm&quot;, &quot;Remodel&quot;, 
IF(Industry__c = &quot;a3Gj0000000XZLh&quot;, &quot;Remodel&quot;, 
IF(Industry__c = &quot;a3Gj0000000fylo&quot;, &quot;Remodel&quot;, 
IF(Industry__c = &quot;a3Gj0000000fymN&quot;, &quot;Remodel&quot;, 
IF(Industry__c = &quot;a3Gj0000000XZM3&quot;, &quot;Remodel&quot;, 
IF(Industry__c = &quot;a3Gj0000000XZM5&quot;, &quot;Remodel&quot;, 
IF(Industry__c = &quot;a3Gj0000000XZM6&quot;, &quot;Remodel&quot;, 
IF(Industry__c = &quot;a3Gj0000000fynB&quot;, &quot;Remodel&quot;, 
IF(Industry__c = &quot;a3Gj0000000XZMS&quot;, &quot;Remodel&quot;, 
IF(Industry__c = &quot;a3Gj0000000XZMd&quot;, &quot;Remodel&quot;,
&quot;&quot;))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fPhoneBP</label>
    <type>Text</type>
</CustomField>