force-app/main/default/objects/OB_Campaign_Member__c/fields/fResDate_NumOfDays__c.field-meta.xml
<CustomField>
    <fullName>fResDate_NumOfDays__c</fullName>
    <formula>AccountName__r.ResDate_NumOfDays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fResDate_NumOfDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>