force-app/main/default/objects/OB_Campaign_Member__c/fields/fScheduling_Paused_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>fScheduling_Paused_Start_Date__c</fullName>
    <formula>OB_Campaign__r.fScheduling_Paused_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduling Paused Start Date</label>
    <type>Date</type>
</CustomField>