force-app/main/default/objects/OB_Campaign_Member__c/fields/fScript__c.field-meta.xml
<CustomField>
    <fullName>fScript__c</fullName>
    <formula>HYPERLINK(&quot;http://nuhome.secure.force.com/index/apex/nuHome_WaterSoftnerFiltration?id=&quot; &amp; Id &amp; &apos;&apos;,&quot;Set Appointment&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fScript</label>
    <type>Text</type>
</CustomField>