force-app/main/default/objects/OB_Campaign_Member__c/fields/fTransfer_Number__c.field-meta.xml
<CustomField>
    <fullName>fTransfer_Number__c</fullName>
    <formula>AND(On_Active_Campaign__c = true,
Incorrect_Phone_Added_to_User_Address__c = false,
fDNC__c = false,
fVerbal_Consent_Flag__c = true,
ISBLANK( fScheduling_Paused_End_Date__c ),
ISBLANK( fOB_Call_ID__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Modified this so we dont break triggers, we are using this as a flag to know when a member is qualified to be inserted into a dialer list. True = Ready to be picked up. False = not qualified.</inlineHelpText>
    <label>fTransfer Number</label>
    <type>Checkbox</type>
</CustomField>