force-app/main/default/objects/OB_Campaign_Member__c/fields/fTransfernumberformat__c.field-meta.xml
<CustomField>
    <fullName>fTransfernumberformat__c</fullName>
    <formula>TEXT (Respond_Date__c  - DATE(YEAR( TODAY() ), 1, 1) + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fTransfernumberformat</label>
    <type>Text</type>
</CustomField>