force-app/main/default/objects/OB_Campaign_Member__c/fields/fVerbal_Consent_Flag__c.field-meta.xml
<CustomField>
    <fullName>fVerbal_Consent_Flag__c</fullName>
    <formula>If( 
Verbal_Consent__c = &quot;Yes&quot; 
|| Verbal_Consent__c = &quot;Phone Only&quot;
|| Verbal_Consent__c = &quot;Full&quot;
|| Verbal_Consent__c = &quot;Full&quot;, True, Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verbal Consent Flag</label>
    <type>Checkbox</type>
</CustomField>