force-app/main/default/objects/OB_Campaign_Member__c/fields/fWebsite__c.field-meta.xml
<CustomField>
    <fullName>fWebsite__c</fullName>
    <description>This is the company website.</description>
    <formula>OB_Campaign__r.Opportunity__r.Account.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the company website.</inlineHelpText>
    <label>fWebsite</label>
    <type>Text</type>
</CustomField>