force-app/main/default/objects/OB_Campaign_Member__c/fields/fYear_Built__c.field-meta.xml
<CustomField>
    <fullName>fYear_Built__c</fullName>
    <formula>User_Address__r.Address__r.fYear_Built__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fYear Built</label>
    <type>Text</type>
</CustomField>