force-app/main/default/objects/OB_Campaign_Member__c/fields/Incorrect_Phone_Added_to_User_Address__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_Phone_Added_to_User_Address__c</fullName>
    <formula>User_Address__r.fPhone_was_added_to_wrong_account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incorrect Phone Added to User Address</label>
    <type>Checkbox</type>
</CustomField>