force-app/main/default/objects/OB_Campaign_Member__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry</label>
    <referenceTo>Industry__c</referenceTo>
    <relationshipLabel>OB Campaign Members</relationshipLabel>
    <relationshipName>OB_Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>