force-app/main/default/objects/OB_Campaign_Member__c/fields/interactionStepId__c.field-meta.xml
<CustomField>
    <fullName>interactionStepId__c</fullName>
    <description>This is used as a primary key to link a Bright Pattern call record to a specific call and recording.</description>
    <inlineHelpText>This is used as a primary key to link a Bright Pattern call record to a specific call and recording.</inlineHelpText>
    <label>interactionStepId</label>
    <type>TextArea</type>
</CustomField>