force-app/main/default/objects/OB_Campaign_Member__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <formula>AccountName__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fLast Name</label>
    <type>Text</type>
</CustomField>