force-app/main/default/objects/OB_Campaign_Member__c/fields/Last_Name_Post__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Post__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>