force-app/main/default/objects/OB_Campaign_Member__c/fields/LeadCreationToken__c.field-meta.xml
<CustomField>
    <fullName>LeadCreationToken__c</fullName>
    <formula>&quot;NH3129&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadCreationToken</label>
    <type>Text</type>
</CustomField>