force-app/main/default/objects/OB_Campaign_Member__c/fields/LeadQual_Lead_ID_Post__c.field-meta.xml
<CustomField>
    <fullName>LeadQual_Lead_ID_Post__c</fullName>
    <label>LeadQual Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>