force-app/main/default/objects/OB_Campaign_Member__c/fields/MSA__c.field-meta.xml
<CustomField>
    <fullName>MSA__c</fullName>
    <formula>Text(User_Address__r.Address__r.MSA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fMSA</label>
    <type>Text</type>
</CustomField>