force-app/main/default/objects/OB_Campaign_Member__c/fields/MSA_Post__c.field-meta.xml
<CustomField>
    <fullName>MSA_Post__c</fullName>
    <label>MSA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>