force-app/main/default/objects/OB_Campaign_Member__c/fields/OB_Campaign__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OB Campaign</label>
    <referenceTo>OB_Campaign__c</referenceTo>
    <relationshipLabel>OB Campaign Members</relationshipLabel>
    <relationshipName>OB_Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>