force-app/main/default/objects/OB_Campaign_Member__c/fields/OB_Campaign_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Primary_Contact_Email__c</fullName>
    <description>OB Campaign primary contact email is used in this case to send an email to the client if the lead was non-transferable.</description>
    <formula>OB_Campaign__r.OB_Campaign_Primary_Contact_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fPrimary Contact Email</label>
    <type>Text</type>
</CustomField>