force-app/main/default/objects/OB_Campaign_Member__c/fields/OBCMTrigVal__c.field-meta.xml
<CustomField>
    <fullName>OBCMTrigVal__c</fullName>
    <formula>AccountName__r.PushOBCM_TrigVal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OBCMTrigVal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>