force-app/main/default/objects/OB_Campaign_Member__c/fields/On_Active_Campaign__c.field-meta.xml
<CustomField>
    <fullName>On_Active_Campaign__c</fullName>
    <formula>Industry__r.OBC_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Active Campaign</label>
    <type>Checkbox</type>
</CustomField>