force-app/main/default/objects/OB_Campaign_Member__c/fields/Opportunity_Post__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Post__c</fullName>
    <label>Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>