force-app/main/default/objects/OB_Campaign_Member__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>BLANKVALUE(AccountName__r.Phone, AccountName__r.PersonContact.MobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fPhone</label>
    <type>Text</type>
</CustomField>