force-app/main/default/objects/OB_Campaign_Member__c/fields/Phone_Post__c.field-meta.xml
<CustomField>
    <fullName>Phone_Post__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>