force-app/main/default/objects/OB_Campaign_Member__c/fields/Rejected_Post__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The opportunity field value that doesn’t match one of the values listed with call center.</description>
    <inlineHelpText>The opportunity field value that doesn’t match one of the values listed with call center.</inlineHelpText>
    <label>Rejected</label>
    <type>Checkbox</type>
</CustomField>