force-app/main/default/objects/OB_Campaign_Member__c/fields/Requested_Window_Time__c.field-meta.xml
<CustomField>
    <fullName>Requested_Window_Time__c</fullName>
    <description>It will store requested window time of appointment details</description>
    <label>Requested Window Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Hour</fullName>
            </value>
            <value>
                <fullName>2 Hour</fullName>
            </value>
            <value>
                <fullName>3 Hour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>