force-app/main/default/objects/OB_Campaign_Member__c/fields/Respond_Date__c.field-meta.xml
<CustomField>
    <fullName>Respond_Date__c</fullName>
    <formula>AccountName__r.Respond_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fRespond Date</label>
    <type>Date</type>
</CustomField>