force-app/main/default/objects/OB_Campaign_Member__c/fields/Respond_Date_Post__c.field-meta.xml
<CustomField>
    <fullName>Respond_Date_Post__c</fullName>
    <label>Respond Date</label>
    <type>Date</type>
</CustomField>