force-app/main/default/objects/OB_Campaign_Member__c/fields/Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date__c</fullName>
    <formula>AccountName__r.Sale_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fSale Date</label>
    <type>Date</type>
</CustomField>