force-app/main/default/objects/OB_Campaign_Member__c/fields/Secondary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone__c</fullName>
    <formula>AccountName__r.PersonContact.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fSecondary Phone</label>
    <type>Text</type>
</CustomField>