force-app/main/default/objects/OB_Campaign_Member__c/fields/Secondary_Phone_Post__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone_Post__c</fullName>
    <label>Secondary Phone</label>
    <type>Phone</type>
</CustomField>