force-app/main/default/objects/OB_Campaign_Member__c/fields/SOQLRegion__c.field-meta.xml
<CustomField>
    <fullName>SOQLRegion__c</fullName>
    <formula>User_Address__r.Address__r.Branch__r.Region_MD__r.Id</formula>
    <label>SOQL Region</label>
    <type>Text</type>
</CustomField>