force-app/main/default/objects/OB_Campaign_Member__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>Text(User_Address__r.Address__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fState</label>
    <type>Text</type>
</CustomField>