force-app/main/default/objects/OB_Campaign_Member__c/fields/State_Post__c.field-meta.xml
<CustomField>
    <fullName>State_Post__c</fullName>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>