force-app/main/default/objects/OB_Campaign_Member__c/fields/Status_Post__c.field-meta.xml
<CustomField>
    <fullName>Status_Post__c</fullName>
    <description>Use for all call centers to post back their disposition.  This field is used for the automation process configuration.</description>
    <label>Status Post</label>
    <length>255</length>
    <type>Text</type>
</CustomField>