force-app/main/default/objects/OB_Campaign_Member__c/fields/Status_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Post_Date__c</fullName>
    <description>This is the date that the final disposition took place in Bright Pattern.</description>
    <inlineHelpText>This is the date that the final disposition took place in Bright Pattern.</inlineHelpText>
    <label>Status Post Date</label>
    <type>Date</type>
</CustomField>