force-app/main/default/objects/OB_Campaign_Member__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <formula>User_Address__r.Address__r.Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fStreet</label>
    <type>Text</type>
</CustomField>