force-app/main/default/objects/OB_Campaign_Member__c/fields/Street_Post__c.field-meta.xml
<CustomField>
    <fullName>Street_Post__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>